Atualização do HTML para exibir produtos diretamente

--- a/index.html
+++ b/index.html
@@ -16,8 +16,152 @@
         <section class="produtos-cadastrados">            
             <h2 class="titulo-produtos-cadastrados">Produtos Cadastrados</h2>
             <div data-produto class="produtos-container">
+                <!-- Produto 1 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./assets/arranhador1.png" alt="Arranhador Cacto">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Arranhador Cacto</h3>
+                        <div class="card-container--value">
+                            <p>R$ 289,90</p>
+                            <button class="delete-button" data-id="1">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
+
+                <!-- Produto 2 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./assets/brinquedo1.png" alt="Brinquedo Interativo">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Brinquedo Interativo</h3>
+                        <div class="card-container--value">
+                            <p>R$ 24,40</p>
+                            <button class="delete-button" data-id="2">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
+
+                <!-- Produto 3 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./assets/bebedouro1.png" alt="Bebedouro c/ filtro">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Bebedouro c/ filtro</h3>
+                        <div class="card-container--value">
+                            <p>R$ 175,00</p>
+                            <button class="delete-button" data-id="3">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
+
+                <!-- Produto 4 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./assets/arranhador2.png" alt="Arranhador Mario">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Arranhador Mario</h3>
+                        <div class="card-container--value">
+                            <p>R$ 589,37</p>
+                            <button class="delete-button" data-id="4">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
+
+                <!-- Produto 5 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./assets/caixaareia1.png" alt="Banheiro fechado">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Banheiro fechado</h3>
+                        <div class="card-container--value">
+                            <p>R$ 87,50</p>
+                            <button class="delete-button" data-id="5">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
+
+                <!-- Produto 6 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="./assets/tunel.png" alt="Túnel">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Túnel</h3>
+                        <div class="card-container--value">
+                            <p>R$ 38,70</p>
+                            <button class="delete-button" data-id="6">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
+
+                <!-- Produto 7 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="https://http2.mlstatic.com/D_NQ_NP_897956-MLB78198700535_082024-O.webp" alt="Casinha Para Gatos">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Casinha Para Gatos</h3>
+                        <div class="card-container--value">
+                            <p>R$ 161,41</p>
+                            <button class="delete-button" data-id="84ba">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
+
+                <!-- Produto 8 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="https://www.petlove.com.br/images/products/170003/product/7898947774947.jpg?1627562356" alt="Cat Pizza">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Cat Pizza</h3>
+                        <div class="card-container--value">
+                            <p>R$ 28,29</p>
+                            <button class="delete-button" data-id="40e9">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
+
+                <!-- Produto 9 -->
+                <div class="card">
+                    <div class="img-container">
+                        <img src="https://http2.mlstatic.com/D_NQ_NP_732809-MLA79908282844_102024-O.webp" alt="Peixe Elétrico">
+                    </div>
+                    <div class="card-container--info">
+                        <h3>Peixe Elétrico</h3>
+                        <div class="card-container--value">
+                            <p>R$ 29,10</p>
+                            <button class="delete-button" data-id="559f">
+                                <img src="./assets/lixeira.png" alt="Excluir produto">
+                            </button>
+                        </div>
+                    </div>        
+                </div>
             </div>
-        </section>            
+        </section>      
+                       
          
         <section class="adicionar-produtos">
             <h2 class="titulo-adicionar-produtos">Adicionar Produtos</h2>
